--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -1,4 +1,4 @@
-## Data Objects {#sec:data_objects}
+## Data Objects {#section:data_objects}
 
 The basic principles by which `yt` operates are built on the notion of selecting data (through coarse and subsequent fine-grained indexing of data sources such as files), accessing that data in a memory-efficient fashion, and then processing that data into either a resultant set of quantitative data or a visualization.
 
