--- a/content/25.processing_and_analysis.md
+++ b/content/25.processing_and_analysis.md
@@ -40,7 +40,7 @@ The array-like operations utilized in `yt` attempt to map to conceptually simila
 Unlike numpy, however, these utilize `yt`'s dataset-aware "chunking" operations, in a manner philosophically similar to the chunking operations used in dask.
 Below, we outline the three classes of operations that are available, based on the type of their return value.
 
-#### Reduction to Scalars  {#sec:arrayops-scalar}
+#### Reduction to Scalars  {#section:arrayops-scalar}
 
 Traditional array operations that map from an array to a scalar are accessible utilizing familiar syntax.  These include:
 
@@ -57,7 +57,7 @@ However, by specifying an axis or set of axes that correspond to fields, the fie
 This allows, for instance, to query the value of "density" at the minimum "temperature."
 The operations `mean` and `sum` are available here in a non-spatial form, where they simply compute the scalar reduction independent of the spatial registration of the dataset.
 
-#### Reduction to Vectors {#sec:arrayops-vector}
+#### Reduction to Vectors {#section:arrayops-vector}
 
  * `profile(axes, fields, profile_specification)`
 
@@ -65,7 +65,7 @@ The `profile` operation provides weighted or unweighted histogramming in one or 
 This function accepts the axes along which to compute the histogram as well as the fields to compute, and information about whether the binning should be an accumulation, an average, or a weighted average.
 These operations are described in more detail in **reference profile section**.
 
-#### Remapping Operations {#sec:arrayops-remap}
+#### Remapping Operations {#section:arrayops-remap}
 
  * `mean(field_specification, weight, axis)`
  * `sum(field_specification, axis)`
