--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -1,4 +1,4 @@
-## Indexing Discrete-Point Datasets {#sec:point_indexing}
+## Indexing Discrete-Point Datasets {#section:point_indexing}
 
 Advances in both hardware and software facilitate astrophysical datasets of growing complexity and size.
 The datasets produced by numerical simulations can currently reach sizes of $\sim$100 Tbytes split across hundreds of files [e.g.
@@ -10,7 +10,7 @@ In order to analyze such large datasets, we need innovative techniques for quick
 We present a technique for using Morton bitmap indexes to map files and accelerate data analysis.
 
 
-### Theory and Background {#sec:bitmap_theory}
+### Theory and Background {#section:bitmap_theory}
 
 #### Domain Partitioning Between Files
 
@@ -180,7 +180,7 @@ This will also depend on the order of the index to which ghost zones are added.
 Ghost zones added at the order of the coarse index will be larger than those added at the order of the refined index and will have a higher probability of touching additional files.
 While including ghost zones is advantageous when neighbor info is needed, it also increases the computational cost of identifying files (see Section @section:tests).
 
-### Methods {#sec:methods}
+### Methods {#section:methods}
 
 The basic procedure for constructing the bitmap index is as follows:
 
@@ -239,7 +239,7 @@ If ghost zones are desired, the neighbors of cells that intersect the edge of th
 For cells without collisions, the neighbors are added at the coarse bitmap order.
 If there are collisions, the neighbors are added at the refined bitmap order.
 
-### Tests {#sec:tests}
+### Tests {#section:tests}
 
 The utility of using Morton index bitmaps for mapping files to decrease query times was tested on artificial N-body simulation datasets containing $1024^3$ points in three dimensions, distributed between 512 files.
 For each test a Morton index bitmap was constructed for the dataset and used to identify files touched by cube shaped three-dimensional selectors.
@@ -248,9 +248,9 @@ If fewer files are touched, fewer files will need to be loaded during analysis o
 If less time is required to identify the files touched by a given selector, more selections can be made using the same computational resources.
 This was done for varying index orders (Section @section:test_order), selector sizes (Section @section:test_size), and partitions of the domain between files (Section @section:test_decomp).
 
-#### Index Order {#sec:test_order}
+#### Index Order {#section:test_order}
 
-#### Overall Refinement {#sec:test_order1}
+#### Overall Refinement {#section:test_order1}
 
 The order of the Morton indices used to map the files determines the time required to identify files and the number of collisions that will occur between files.
 Higher order indices will result in fewer collisions, but will take longer to query, as seen in Figure @fig:test_order1 Six selectors of varying sizes and positions within the domain where used to identify files based on Morton index bitmaps of varying order.
@@ -273,7 +273,7 @@ While it is generally true that the time required to identify files using a bitm
 The memory required to store the index for the test dataset scales according to $\propto2^{2k}$, for a $k^{\mbox{th}}$ order index.
 If uncompressed bitmaps had been used instead of EWAH compressed bitmap, the memory would have scaled with the total number of cells contained within the 3-dimensional test domain ($2^{3k}$).
 
-#### Collision Refinement {#sec:test_order2}
+#### Collision Refinement {#section:test_order2}
 
 Increasing the refinement of the primary index does so for the entire domain and, as seen in Section @section:test_order1, can become costly in terms of the memory required to store the bitmap and the time required to perform operations.
 However, it is also possible to increase refinement by nesting a second Morton bitmap index within those cells of the primary index that contain collisions.
@@ -299,7 +299,7 @@ The optimal value for the orders of the first and second indexes will depend upo
 The density of data points within the test dataset used here is relatively uniform throughout the domain and does not need a high level of refinement at collisions.
 However, if a datasetwere less uniform with concentrations of points, the optimal order of the second index for performance may be higher.
 
-#### Selector Size {#sec:test_size}
+#### Selector Size {#section:test_size}
 
 The time required to identify files touched by a selection will also depend upon the size of the region being selected.
 Larger selectors will intersect more indices and more files, resulting in more bitmap operations.
@@ -324,7 +324,7 @@ If the selector edge is near a file boundary, ghost zones have the potential to 
 For such a highly ordered dataset, the ghost zones will only identify additional files for selectors that are nearing the edges of file boundaries.
 However, queries including ghost zones require slightly more time even when this is not the case.
 
-#### Domain Partitioning {#sec:test_decomp}
+#### Domain Partitioning {#section:test_decomp}
 
 As discussed in Section @section:decomp, a bitmap index is more effective in cases where the domain is partitioned between files in a localized way.
 If files contain non-contiguous parts of the domain, contiguous selections will require more files to be loaded.
@@ -352,7 +352,7 @@ The sliced dataset performed particularly well in this case because the selector
 
 Overall, this technique offers a considerable improvement in performance over other methods that require reading, evaluating and discarding all of the particles.
 
-### Summary & Discussion {#sec:discuss}
+### Summary & Discussion {#section:discuss}
 
 Mapping files using Morton bitmap indexes speeds up analysis of large datasets split across multiple files by reducing the number of files that need to be loaded in order to perform operations on a subset of the full domain.
 The time required for making selections using the bitmap index is minimal for even large datasets and can be optimized by partitioning the domain between files in a localized way and using an index or indexes of appropriate order for the dataset.
@@ -371,7 +371,7 @@ However, it can also be applied to single files by dividing the file's contents 
 As in the multi-file case, the single file would need to be organized such that chunks were localized within the domain to take full advantage of the bitmaps.
 In addition, while the current implementation of this method is designed for three-dimensional spatial datasets like those produced by astrophysical simulations, the same methods can be applied to non-spatial datasets with arbitrary dimensionality.
 
-### Code {#sec:code}
+### Code {#section:code}
 
 These procedures have been implemented as part of the yt Python package [@Turk20d11a] in order to facilitate the analysis of large astrophysical N-body simulations; currently undergoing review for inclusion in a future version of yt (4.0 or later), our implementation is available at https://bitbucket.org/langmm/yt-bitmap.
 **NOTE: This use to say "3.4 or later". Now it's pretty clear this section is a bit dated. Hasn't the bitmap stuff been merged by now ?**
